fix mobile image not showing up-change to #hero

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ nav ul li a {
 
 /* For mobile screens */
 @media only screen and (max-width: 768px) {
-    .hero-section {
+    #hero {
         background-image: url('../images/image-664.jpg');
         background-size: cover;
         background-position: center;
